--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.3.1",
     "morgan": "^1.10.0",
-    "nodemon": "^1.14.9"
+    "nodemon": "^1.14.9",
+    "react-bootstrap": "^2.8.0",
+    "react-router-dom": "^6.14.1"
   }
 }
