--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-spinners-components": "^2.0.4",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
